Fix firefox Grid execution and window resize